added endpoints to actually use the cache
